--- a/css/style.css
+++ b/css/style.css
@@ -6326,9 +6326,13 @@ header {
   
 }
 
+#work-section .container .work-post {
+  padding-bottom: 30px;
+}
+
 #work-section ul {
   margin: 0;
-  padding: 0;
+  padding: 0 20px;
 }
 #work-section p {
   margin: 0;
@@ -6341,7 +6345,7 @@ header {
 }
 #work-section ul li {
   margin: 0;
-  padding: 0;
+  padding: 5px 0;
   font-family: "Poppins", sans-serif;
   color: #03212C;
   font-size: 14px;
@@ -6351,7 +6355,7 @@ header {
 
 #work-section .container {
   
-  padding: 0 0 50px;
+  padding: 0 0 30px;
 }
 
 section.about-me-section ul {
