--- a/css/style.css
+++ b/css/style.css
@@ -3278,7 +3278,7 @@ ul.pagination-list li:nth-child(2):after {
 section.about-me-section {
   
   padding: 30px 0 100px;
-  background: #8acfef;
+  background: #47B4E6;
 }
 section.about-me-section .about-me-box {
   overflow: hidden;
@@ -5820,6 +5820,9 @@ footer ul.social-icons li a:hover:after {
   }
 }
 @media (max-width: 1199px) {
+  section.about-me-section {
+    padding: 30px 0 30px;
+  }
   div.megadrop {
     max-width: 800px;
   }
@@ -5914,6 +5917,9 @@ footer ul.social-icons li a:hover:after {
   }
 }
 @media (max-width: 991px) {
+  section.about-me-section {
+    padding: 30px 0 30px;
+  }
   div.megadrop ul {
     margin-bottom: 30px;
   }
@@ -6092,6 +6098,9 @@ footer ul.social-icons li a:hover:after {
   }
 }
 @media (max-width: 767px) {
+  section.about-me-section {
+    padding: 30px 0 30px;
+  }
   .navbar .navbar-brand {
     padding: 20px 15px;
   }
